# specular-cli

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum
.githooks/: pre-commit
.github/workflows/: pr.yml  release.yml
cmd/spc/: main.go
internal/service/config/: config.go  logger.go
internal/service/di/: application.go  cmd_provider.go  common_provider.go  config_provider.go  inject.go  wire_gen.go
internal/spc/: utils.go
internal/spc/executor/: run.go
internal/spc/handlers/exec/: exec.go
internal/spc/handlers/test/: test.go
internal/spc/handlers/up/: up.go
internal/spc/handlers/workspace/: workspace.go
internal/spc/infra/integration/: interfaces.go
internal/spc/infra/integration/local_docker/: geth.go  magi.go  operator.go  sidecar.go  sp-geth.go
internal/spc/workspace/: handler.go  workspace.go
src/: main.rs
src/remote/: mod.rs
src/workspace/: mod.rs  ops.rs  requests.rs
tests/: common.go
tests/e2e/local_docker_run/: README.md  local_docker_example_test.go  suite_test.go
tests/e2e/local_run/: README.md
tests/e2e/run_local_docker/: local_docker_example_test.go  suite_test.go
