[package]
name = "specular-cli"
version = "0.1.0"
edition = "2021"
authors = ["maciej <maciej@specular.network>"]
description = "A commandline tool to manage specular network workspaces and runtime"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary for a "smaller" size.
lto = true

[dependencies]
walkdir = "2"
clap = { version = "4.4.11", features = ["derive"] }
kdam = { version = "0.5.1", features = ["rich"] }
url = "2.5.0"
envconfig = "0.10.0"
zip = "0.6.5"
async-recursion = "1.0.5"
tokio = { version = "1.35.0", features = ["full"] }
futures = "0.3.29"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
home = "0.5.5"
